# cpp-proj

./: .gitignore  AddScore.h  Arraytest.cpp  Arraytest.h  CMakeLists.txt  Datatype.h  FileOperate.h  Main.cpp  MultiThread.cpp  MultiThread.h  MyExcetion.cpp  Peektest.h  Student.h  TEmp.cpp  TEmp.h  Temp.h
Pointers/: Dogspointer.cpp  Dogspointer.h  String.cpp  String.h
algorithmcpp/: algorithmcpp.sln
algorithmcpp/algorithmcpp/: Algorithm.h  DataStruct.cpp  Main.cpp  MainMethod.h
algorithmcpp/cpptest1/: cpptest1.vcxproj
c-proj/cursor/: .gitignore  CMakeLists.txt  main.c  main.h
cmake-proj/tutor/: .gitignore  AddScore.cpp  CMakeLists.txt  DynamicMemory.h  Main.cpp  MyExcetion.h  Temp.cpp
cmake-proj/tutor/Pointers/: String.cpp
cmake-proj/tutor/langpack/: Clang.h  Cpplang.cpp  Cpplang.h
comm2/: .gitignore  algorithmdialog.ui  camdialog.cpp  camdialog.ui  comm2.pro  gaussdialog.ui  mainwindow.cpp  mainwindow.h
langpack/: Cpplang.h
msvc-proj/algorithmcpp/algorithmcpp/: Algorithm.cpp  DataStruct.h  MainMethod.cpp  algorithmcpp.vcxproj  algorithmcpp.vcxproj.filters
polymorphism/: Rectangle.cpp  Rectangle.h
qt-proj/comm2/: algorithmdialog.cpp  algorithmdialog.h  camdialog.h  gaussdialog.cpp  gaussdialog.h  mainwindow.ui
tutor/: Datatype.cpp  DynamicMemory.cpp  FileOperate.cpp  NumOperate.cpp  NumOperate.h  Peektest.cpp  Student.cpp
tutor/Pointers/: Dogspointer.cpp
tutor/func/: Pointers.cpp  Pointers.h
tutor/langpack/: Clang.cpp  Cpplang.cpp
tutor/leetcode/: Leet1.cpp  Leet1.h
xmake-proj/hello/: .gitignore  CMakeLists.txt  xmake.lua
(+2 files in other folders)
